--- a/share/qt/Info.plist.in
+++ b/share/qt/Info.plist.in
@@ -96,7 +96,11 @@
 
   <key>NSHighResolutionCapable</key>
     <string>True</string>
-  <key>LSApplicationCategoryType</key>
+  
+  <key>LSAppNapIsDisabled</key>
+    <string>True</string>
+
+<key>LSApplicationCategoryType</key>
     <string>public.app-category.finance</string>
 </dict>
 </plist>
