--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -126,8 +126,7 @@ QT_MOC_CPP = \
 
 BITCOIN_MM = \
   qt/macdockiconhandler.mm \
-  qt/macnotificationhandler.mm \
-  qt/macos_appnap.mm
+  qt/macnotificationhandler.mm
 QT_MOC = \
   qt/pictureex.moc \
   qt/bitcoinamountfield.moc \
@@ -146,7 +145,6 @@ PROTOBUF_PROTO = qt/paymentrequest.proto
 
 BITCOIN_QT_H = \
   qt/addressbookpage.h \
-    qt/macos_appnap.h \
   qt/addresstablemodel.h \
   qt/askpassphrasedialog.h \
   qt/bantablemodel.h \
